[tool.poetry]
name = "checkurl"
version = "0.1.0"
description = "Easy and Beautiful interface to check url."
authors = ["Alfredo de Morais"]
license = "MIT LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.28.1"
pytest = "7.2.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
